[package]
name = "chess_board"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
askama = "0.12.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
sled = "0.34.7"
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
